# ColormapGenerator

./: CMakeLists.txt  ColormapToImage.cpp  ColormapToImage.h  Interpolation.cpp  Interpolation.h  README.md  main.cpp
